# CodeScan

./: .gitignore  CodeScan.cabal  CodeScan.leo  CodeScan.mm  Setup.hs  winning_graphs
nauty/: gtools.h  makefile  nauty.h  shortg.c
sources/: CanonicalForm.hs  CanonicalizeCode.hs  CanonicalizeGraphs.hs  ChooseRandomGraphs.hs  ComputeEquivalenceClass.hs  ComputeIdentifier.hs  CountCombinations.hs  FilterCompletedGraphs.hs  ListCompletedGraphs.hs  ListEquivalentIdentifiers.hs  ListWinningCodes.hs  ListWinningGraphs.hs  MakeBunchedCondor.hs  MakeCondor.hs  NeighborCountHistogram.hs  NeighborCountStatistics.hs  ScanCodes.hs  ShowCode.hs  codescan.cc  codescan.hpp  combg.hs  unit--.C  unit--.h
sources/CodeQuest/CodeScan/: Code.hs  CodeGraph.hs  Database.hs  Equivalence.hs  MyNauty.hs  Permutations.hs  Scanner.hs
sources/tests/: CodeGraphTests.hs  EquivalenceTests.hs  PermutationsTests.hs  codescan_tests.cc
sql/: change-column-type.sql  clear-database.sql  create-codequest-database.sql  show-weights-of-winners.sql
